tests/unescaped-newline-in-string.c.err
./tests/unescaped-newline-in-string.c:12:24: error: Unescaped newline in string
